mailpoet/assets/js/src/email-editor/engine/components/block-editor/index.scss
@import '~@wordpress/base-styles/colors';

// Specific styles for the component EmailTypeInfo
// Styles are based on the Block Card component from Gutenberg block editor
.mailpoet-email-sidebar__email-type-info {
  .components-panel__row {
    align-items: flex-start;
  }

  .mailpoet-email-type-info__icon {
    flex: 0 0 24px;
    margin-left: 0;
    margin-right: 12px;
  }

  .mailpoet-email-type-info__content {
    flex-grow: 1;
    margin-bottom: 4px;

    h2 {
      font-size: 13px;
      line-height: 24px;
      margin: 0 0 4px;
    }

    span {
      font-size: 13px;
    }
  }
}

.mailpoet-email-editor__settings-panel {
  .mailpoet-settings-panel__subject .components-base-control__label {
    width: 100%;

    .components-external-link {
      float: right;
    }
  }

  .mailpoet-settings-panel__help {
    margin-bottom: 20px;

    .components-text {
      color: #757575;
    }
  }

  .mailpoet-settings-panel__preview-text .components-base-control__label {
    width: 100%;
  }

  .mailpoet-settings-panel__preview-text-length {
    color: $black;
    display: inline-block;
    float: right;
    padding: 3px;
  }

  .mailpoet-settings-panel__preview-text-length-warning {
    color: $alert-yellow;
  }

  .mailpoet-settings-panel__preview-text-length-error {
    color: $alert-red;
  }
}

.edit-post-visual-editor {
  line-height: 1.4; /* Recommended line-height that is also used in the email editor */
  margin: 0;
  min-height: 100%;
  padding: 0;
  -webkit-text-size-adjust: 100%; /* From MJMJ - Automatic test adjustment on mobile max to 100% */
  -ms-text-size-adjust: 100%; /* From MJMJ - Automatic test adjustment on mobile max to 100% */
  word-spacing: normal;
}

.visual-editor__email_layout_wrapper {
  height: 100%;
  margin: 0 auto;
  padding: 0;
  width: 100%;
}

.visual-editor__email_content_wrapper {
  display: flex;
  height: 100%;
  width: 100%;

  > div {
    width: 100%;
  }

  // Set default padding-left to have consistent default look in editor and in email
  // This also overrides the default values in browsers for padding-inline-start
  ul,
  ol,
  ul.has-background,
  ol.has-background {
    padding-left: 40px;
  }

  // Override default button border radius which is set in core to 9999px
  .wp-block-button__link {
    border-radius: 0;
  }

  .is-mobile-preview {
    .wp-block-columns {
      display: flex;
      flex-direction: column;

      .wp-block-column {
        box-sizing: border-box;
        // override flex-basis set in style attribute to fix the height of the column in mobile preview. Blocks overriding is as a part of style.css in blocks-library
        flex-basis: auto !important;
      }
    }
  }

  // Fix for mobile preview height
  &.is-mobile-preview {
    > div {
      display: block !important;
    }
    .editor-styles-wrapper {
      height: auto !important;
    }
  }
}

.has-global-padding .wp-block-post-content > .alignfull {
  margin-left: -20px;
  margin-right: -20px;
}

// For the WYSIWYG experience we don't want to display any margins between blocks in the editor
.wp-block {
  clear: both; // for ensuring that floated elements (images) are cleared
}

// Resetting the margin for images in the editor to avoid unexpected spacing
.editor-styles-wrapper .is-layout-constrained .wp-block-image {
  figcaption {
    margin: 0;
  }

  &.alignleft,
  &.alignright {
    margin-inline-end: 0;
    margin-inline-start: 0;
    text-align: center;
  }
  &.aligncenter {
    margin-left: auto;
    margin-right: auto;
  }
}

.editor-styles-wrapper {
  .wp-block-columns:not(.is-not-stacked-on-mobile)
    > .wp-block-column[style*='flex-basis'] {
    box-sizing: border-box;
  }
}

// Content does not need margin. The rendered template does not add margins to match.
.editor-styles-wrapper .wp-block-post-content {
  margin: 0;
}

// Hide the advanced settings in the sidebar. This panel is not used in the email editor at this moment.
.block-editor-block-inspector__advanced {
  display: none;
}

